[project]
name = "ets_fiber_assigner"
readme = "README.md"
authors = [
  {name = "Martin Reinecke", email = "martin@mpa-garching.mpg.de"},
  {name = "Maximilian Fabricius"},
]
requires-python = ">=3.10"
dependencies = [
  "numpy >= 1.17.0",
# what is our minimum required astropy version? We just need the Table class
  "astropy",
# we still need version constraints for those, to ensure compatibility
#  "ics.cobraOps @ git+https://github.com/Subaru-PFS/ics_cobraOps.git@2.0.5",
#  "pfs.datamodel @ git+https://github.com/Subaru-PFS/datamodel.git",
#  "pfs.utils @ git+https://github.com/Subaru-PFS/pfs_utils.git",
]
description = "Fiber assignment code for the PFS instrument"
license = "GPL-2.0-or-later"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["ets_fiber_assigner"]

[tool.setuptools.dynamic]
version = {attr = "ets_fiber_assigner.__version__"}
